# basalt

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN-movable-leaves.md  PARITY.md  README.md  ROADMAP-parity.md  ROADMAP.md  app-harness.html  harness.html  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vite.harness.config.ts
.github/workflows/: ci.yml  release.yml
basalt-core/: Cargo.toml
basalt-core/src/: lib.rs
basalt-server/: Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.yml
basalt-server/src/: main.rs
cli/: README.md  basalt.mjs  core.d.mts  core.mjs
e2e/: audio.spec.ts  bases.spec.ts  bookmarks.spec.ts  canvas.spec.ts  import.spec.ts  layout.spec.ts  leaves.spec.ts  menus.spec.ts  plugins.spec.ts  properties.spec.ts  slides.spec.ts
plugins/calendar/: main.js  manifest.json
plugins/dataviewjs/: main.js  manifest.json
plugins/kanban/: main.js  manifest.json
plugins/pomodoro/: main.js  manifest.json
plugins/tasks-lite/: main.js  manifest.json
plugins/templater-lite/: main.js  manifest.json
src/: App.tsx  app-harness.tsx  harness.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Backlinks.tsx  BaseView.tsx  Bookmarks.tsx  CanvasView.tsx  EditorPane.tsx  ErrorBoundary.tsx  ExprInput.tsx  GraphView.test.ts  GraphView.tsx  InlineTitle.tsx  Outline.tsx  Palette.tsx  PaneTree.tsx  PluginViewMount.tsx  PromptModal.tsx  Properties.tsx  ReadingView.tsx  Ribbon.tsx  RightPanel.tsx  SettingsModal.tsx  SideResizer.tsx  Sidebar.tsx  SlidesView.test.ts  SlidesView.tsx  StackedTabs.tsx  StatusBar.tsx  TabBar.tsx  Tags.test.ts  Tags.tsx  VaultSwitcher.tsx  VersionHistory.tsx  WorkspacesModal.tsx
src/editor/: attachments.ts  calloutFold.ts  callouts.ts  codeBlocks.ts  comments.ts  embeds.ts  footnotes.ts  frontmatter.test.ts  frontmatter.ts  headingFold.test.ts  headingFold.ts  highlight.ts  htmlBlock.ts  htmlInline.ts  inlineRender.ts  livePreview.ts  markdownKeys.test.ts  markdownKeys.ts  math.ts  mermaid.ts  pasteLink.ts  pluginBlocks.ts  query.ts  regions.ts  setup.ts  tables.test.ts  tables.ts  tags.ts  theme.ts  transcludeBlocks.ts  wikilink.ts
src/lib/: assets.ts  attachments.test.ts  attachments.ts  bases.test.ts  bases.ts  calendar.test.ts  callouticons.ts  canvas.test.ts  canvas.ts  cli.test.ts  daily.test.ts  daily.ts  dataviewjs.test.ts  deeplink.test.ts  deeplink.ts  export.test.ts  export.ts  folderMove.test.ts  frontmatter.test.ts  frontmatter.ts  fuzzy.ts  hotkeys.test.ts  hotkeys.ts  hoverPreview.ts  htmlBlocks.test.ts  htmlBlocks.ts  kanban.test.ts  leafViews.test.ts  leafViews.ts  linkify.test.ts  linkify.ts  markdown.ts  math.ts  media.test.ts  media.ts  mermaid.ts  (+41 more)
(+1 files in other folders)
