[package]
name = "basalt-server"
version = "0.1.0"
description = "Basalt web backend — serves the Basalt app + the vault over HTTP/SSE, using the same basalt-core vault engine as the desktop app."
authors = ["Owen Eldridge"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
basalt-core = { path = "../basalt-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
